Cleanup Event router fail safes.

Fail safes added to EventRouter are replaced with DCHECKS.

Bug: 897946
Change-Id: I9e05eabe3882ec772f1912b5c4d5fcc46c8914e9
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1591843
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Commit-Queue: Ramin Halavati <rhalavati@chromium.org>
Cr-Commit-Position: refs/heads/master@{#657139}

Former-commit-id: 1e2fb521261a4fb49057c75458c17e7d3830bb83