chrome/browser/extensions/chrome_extensions_browser_client.cc
@@ -115,12 +115,7 @@ bool ChromeExtensionsBrowserClient::AreExtensionsDisabled(
 
 bool ChromeExtensionsBrowserClient::IsValidContext(
     content::BrowserContext* context) {
-  // TODO(https://crbug.com/870838): Remove after investigating the bug.
-  if (!context) {
-    LOG(ERROR) << "Unexpected null context";
-    NOTREACHED();
-    return false;
-  }
+  DCHECK(context);
   if (!g_browser_process) {
     LOG(ERROR) << "Unexpected null g_browser_process";
     NOTREACHED();
