extensions/browser/event_router.cc
@@ -719,13 +719,7 @@ void EventRouter::DoDispatchEventToSenderBookkeepingOnUI(
   DCHECK_CURRENTLY_ON(BrowserThread::UI);
   BrowserContext* browser_context =
       reinterpret_cast<BrowserContext*>(browser_context_id);
-  // TODO(https://crbug.com/870838): Remove after investigating the bug.
-  if (!ExtensionsBrowserClient::Get()) {
-    LOG(ERROR) << "ExtensionsBrowserClient does not exist.";
-    NOTREACHED();
-    return;
-  }
-  // TODO(https://crbug.com/870838): Remove after investigating the bug.
+  // TODO(https://crbug.com/897946): Remove after investigating the bug.
   if (ExtensionsBrowserClient::Get()->IsShuttingDown()) {
     LOG(ERROR)
         << "Event dispatched while shutting down extensions browser client.";
@@ -733,24 +727,14 @@ void EventRouter::DoDispatchEventToSenderBookkeepingOnUI(
   }
   if (!ExtensionsBrowserClient::Get()->IsValidContext(browser_context))
     return;
-  // TODO(https://crbug.com/870838): Remove after investigating the bug.
-  if (!ExtensionRegistry::Get(browser_context)) {
-    LOG(ERROR) << "ExtensionRegistry does not exist.";
-    NOTREACHED();
-    return;
-  }
+  DCHECK(ExtensionRegistry::Get(browser_context));
   const Extension* extension =
       ExtensionRegistry::Get(browser_context)->enabled_extensions().GetByID(
           extension_id);
   if (!extension)
     return;
   EventRouter* event_router = EventRouter::Get(browser_context);
-  // TODO(https://crbug.com/870838): Remove after investigating the bug.
-  if (!event_router) {
-    LOG(ERROR) << "EventRouter does not exist.";
-    NOTREACHED();
-    return;
-  }
+  DCHECK(event_router);
   event_router->IncrementInFlightEvents(
       browser_context, content::RenderProcessHost::FromID(render_process_id),
       extension, event_id, event_name, service_worker_version_id);
